--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="log_in">Log In</string>
     <string name="username">Username</string>
     <string name="icon">icon</string>
+    <string name="welcome_login">Welcome!</string>
+    <string name="manager_button">manager</string>
+    <string name="employee_button">employee</string>
+    <string name="manager_or_employee">Are you a...</string>
 </resources>
