my activities work (blessup)
Thank you Luke Skywalker
Also did margins on the text to make it look decent. It's a lot like html more than I imagined it to be

Co-Authored-By: Luke Harrison <lharriso@nyit.edu>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="manager_button">manager</string>
     <string name="employee_button">employee</string>
     <string name="manager_or_employee">Are you a...</string>
+    <string name="my_dashboard">My Dashboard</string>
+    <string name="user123">user123</string>
 </resources>
