--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="manager_or_employee">Are you a...</string>
     <string name="my_dashboard">My Dashboard</string>
     <string name="user123">user123</string>
+    <string name="view_schedule">View Schedule</string>
 </resources>
