messaging (temp) layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="monday">Monday</string>
     <string name="week_1">Week 1</string>
     <string name="notifications">Notifications</string>
+    <string name="messaging">Messaging</string>
 </resources>
