--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="message">Message</string>
     <string name="day_of_the_week">Day of the Week</string>
     <string name="time_scheduled">Time scheduled</string>
+    <string name="change_your_availability">Change Your Availability</string>
+    <string name="time_start">Time Start</string>
+    <string name="time_end">Time End</string>
+    <string name="submit">Submit</string>
+    <string name="date">Date</string>
 </resources>
