--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="switching_from">Switching from:</string>
     <string name="day">Day</string>
     <string name="to">To:</string>
+    <string name="from">From:</string>
 </resources>
