--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="decline">Decline</string>
     <string name="accept">Accept</string>
     <string name="view_requests">View Requests</string>
+    <string name="select_day_off">Select Day Off</string>
 </resources>
