--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="accept">Accept</string>
     <string name="view_requests">View Requests</string>
     <string name="select_day_off">Select Day Off</string>
+    <string name="select_time">Select Time</string>
 </resources>
