--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="view_requests">View Requests</string>
     <string name="select_day_off">Select Day Off</string>
     <string name="select_time">Select Time</string>
+    <string name="breakdown">Breakdown</string>
 </resources>
